# datalab-app-plugin-insitu

./: .copier-answers.yml  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: .pages  index.md  reference.md
docs/reference/: base.md  nmr.md  uvvis.md  xrd.md
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/1/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/10/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/100/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/101/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/102/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/103/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/104/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/105/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/106/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/107/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/108/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/109/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/11/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/110/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/111/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/112/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/113/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/114/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/115/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/116/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/117/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/118/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/119/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/12/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/120/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/121/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/122/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/123/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/124/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/125/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/126/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/127/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/128/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/129/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/2023-08-11_jana_insituLiLiTEGDME-02_galv/13/: acqus  audita.txt  fid  scon2
example_data/Example-TEGDME/LiLiTEGDMEinsitu_02/: .Rhistory  LiLiTEGDMEinsitu_02.rds  LiLiTEGDMEinsitu_02_NMRdata.rds  LiLiTEGDMEinsitu_02_NMRforstackplot.rds  M.Li_02.cvs  M.Li_02.txt  dfenv_LiLiTEGDMEinsitu_02.rds  fit peaks_jana_insituLiLi_02.R  fitLiLiTEGDMEinsitu_02.rds  import_NMRdata_Jana_02.R  peakfit1_Li_02.txt  peakfit2_Li_02.txt  time-integral-metal02.txt
example_data/LiLiTEGDMEinsitu_02/: LiLiTEGDMEinsitu_02_df_all.json  dfenv_LiLiTEGDMEinsitu_02.json
scripts/archives/: fit_peaks_insitu.py  import_NMRdata.py
search/: search_index.json
src/datalab_app_plugin_insitu/: __init__.py  _version.py  blocks.py  echem_utils.py  legacy_plotting.py  nmr_insitu.py  plotting.py  plotting_uvvis.py  plotting_xrd_uvvis.py  utils.py  uvvis_utils.py
src/datalab_app_plugin_insitu/apps/: __init__.py
src/datalab_app_plugin_nmr_insitu/: __init__.py  blocks.py  import_NMRdata_1r.py  nmr_insitu.py  utils.py
tests/: __init__.py  conftest.py  test_datalab_app_plugin_insitu.py  test_datalab_app_plugin_nmr_insitu.py  test_df_data.py  test_fit_data.py  test_inisitu_uvvis_block.py  test_inisitu_xrd_block.py  test_insitu_nmr_block.py  test_insitu_xrd_block.py
(+5894 files in other folders)
