[build-system]
requires = ["setuptools >= 75", "wheel", "setuptools_scm ~= 8.1"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "Ben Charmes", email = "benjamin.charmes@gmail.com" },
    { name = "datalab development team", email = "dev@datalab-org.io" },
]
name = "datalab-app-plugin-insitu"
description = "Datalab plugin for In Situ data, primarily NMR"
readme = "README.md"
keywords = []
license = { text = "MIT" }
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Topic :: Other/Nonlisted Topic",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "numpy>=1.26.4,<2",
    "matplotlib>=3.9.2",
    "lmfit>=1.3.2",
    "scipy>=1.14.1",
    "nmrglue>=0.11",
    "navani>=0.1.11",
    "datalab-server >= 0.5.3",
]
[project.optional-dependencies]
local = ["datalab-api >= 0.2.10"]

[project.urls]
homepage = "https://datalab-org.github.io/datalab-app-plugin-insitu/"
repository = "https://github.com/datalab-org/datalab-app-plugin-insitu"
documentation = "https://datalab-org.github.io/datalab-app-plugin-insitu/"

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[project.entry-points.'pydatalab.apps.plugins']
insitu_nmr = "datalab_app_plugin_insitu.apps.nmr:InsituBlock"

[tool.setuptools.package-data]
datalab_app_plugin_insitu = ["py.typed"]

[tool.setuptools.package-dir]
datalab_app_plugin_insitu = "src/datalab_app_plugin_insitu"

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "Q"]
ignore = ["E501", "E402"]
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []
per-file-ignores = {}
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.uv]
dev-dependencies = [
    "pytest ~= 8.2",
    "pytest-cov ~= 5.0",
    "pre-commit ~= 4.0",
    "mkdocs ~= 1.6",
    "mkdocs-material ~= 9.5",
    "mkdocstrings[python-legacy] ~= 0.25",
    "mkdocs-awesome-pages-plugin ~= 2.9",
    "datalab-server ~= 0.5",
]

[tool.coverage.run]
include = ["src/*"]
parallel = true
branch = true

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = [
    '^\s*assert False(,|$)',
    'if typing.TYPE_CHECKING:',
    '^\s*@overload( |$)',
]
